// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`YooAccordionComponent Snapshots should display the accordion 1`] = `
<yoo-accordion
  class="hydrated"
  data-yoo-accordion-host=""
>
  
  <div
    class="outer-container"
    data-yoo-accordion=""
  >
    <div
      class="accordion-selector"
      data-yoo-accordion=""
    >
      <div
        attr-layout="row"
        attr-layout-align="space-between"
        class="accordion-title"
        data-yoo-accordion=""
      >
        <span
          class="text"
          data-yoo-accordion=""
        >
          accordion1
        </span>
        <span
          class="icon"
          data-yoo-accordion=""
        >
          <i
            class="yo-plus"
            data-yoo-accordion=""
          />
        </span>
      </div>
      <div
        class="undisplayed-accordion"
        data-yoo-accordion=""
        data-yoo-accordion-slot=""
        id="accordion1"
      >
        
      </div>
    </div>
    <div
      class="accordion-selector"
      data-yoo-accordion=""
    >
      <div
        attr-layout="row"
        attr-layout-align="space-between"
        class="accordion-title"
        data-yoo-accordion=""
      >
        <span
          class="text"
          data-yoo-accordion=""
        >
          accordion2
        </span>
        <span
          class="icon"
          data-yoo-accordion=""
        >
          <i
            class="yo-plus"
            data-yoo-accordion=""
          />
        </span>
      </div>
      <div
        class="undisplayed-accordion"
        data-yoo-accordion=""
        data-yoo-accordion-slot=""
        id="accordion2"
      >
        
      </div>
    </div>
    <div
      class="accordion-selector"
      data-yoo-accordion=""
    >
      <div
        attr-layout="row"
        attr-layout-align="space-between"
        class="accordion-title"
        data-yoo-accordion=""
      >
        <span
          class="text"
          data-yoo-accordion=""
        >
          accordion3
        </span>
        <span
          class="icon"
          data-yoo-accordion=""
        >
          <i
            class="yo-plus"
            data-yoo-accordion=""
          />
        </span>
      </div>
      <div
        class="undisplayed-accordion"
        data-yoo-accordion=""
        data-yoo-accordion-slot=""
        id="accordion3"
      >
        
      </div>
    </div>
    <div
      class="accordion-selector"
      data-yoo-accordion=""
    >
      <div
        attr-layout="row"
        attr-layout-align="space-between"
        class="accordion-title"
        data-yoo-accordion=""
      >
        <span
          class="text"
          data-yoo-accordion=""
        >
          accordion4
        </span>
        <span
          class="icon"
          data-yoo-accordion=""
        >
          <i
            class="yo-plus"
            data-yoo-accordion=""
          />
        </span>
      </div>
      <div
        class="undisplayed-accordion"
        data-yoo-accordion=""
        data-yoo-accordion-slot=""
        id="accordion4"
      >
        
      </div>
    </div>
  </div>
</yoo-accordion>
`;

exports[`YooAccordionComponent Snapshots should have headings containers 1`] = `
<yoo-accordion
  class="hydrated"
  data-yoo-accordion-host=""
>
  
  <div
    class="outer-container"
    data-yoo-accordion=""
  >
    <div
      class="accordion-selector"
      data-yoo-accordion=""
    >
      <div
        attr-layout="row"
        attr-layout-align="space-between"
        class="accordion-title"
        data-yoo-accordion=""
      >
        <span
          class="text"
          data-yoo-accordion=""
        >
          accordion1
        </span>
        <span
          class="icon"
          data-yoo-accordion=""
        >
          <i
            class="yo-plus"
            data-yoo-accordion=""
          />
        </span>
      </div>
      <div
        class="undisplayed-accordion"
        data-yoo-accordion=""
        data-yoo-accordion-slot=""
        id="accordion1"
      >
        
      </div>
    </div>
  </div>
</yoo-accordion>
`;

exports[`YooAccordionComponent Snapshots should render slot 1`] = `
<yoo-accordion
  class="hydrated"
  data-yoo-accordion-host=""
>
  
  
  <div
    slot="accordion2"
  >
    hi2
  </div>
  <div
    class="outer-container"
    data-yoo-accordion=""
  >
    <div
      class="accordion-selector"
      data-yoo-accordion=""
    >
      <div
        attr-layout="row"
        attr-layout-align="space-between"
        class="accordion-title"
        data-yoo-accordion=""
      >
        <span
          class="text"
          data-yoo-accordion=""
        >
          accordion1
        </span>
        <span
          class="icon"
          data-yoo-accordion=""
        >
          <i
            class="yo-plus"
            data-yoo-accordion=""
          />
        </span>
      </div>
      <div
        class="undisplayed-accordion"
        data-yoo-accordion=""
        data-yoo-accordion-slot=""
        id="accordion1"
      >
        
        <div
          slot="accordion1"
        >
          hi
        </div>
      </div>
    </div>
  </div>
</yoo-accordion>
`;
